Fix bug with --add-exports and --add-modules duplicate reporting.